completion percentage fixed